Atualização do projeto

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                     <a class="media-info" href="mailto:araujomatheusventura@gmail.com" target="_blank">
 
                         <img src="./src/images/logo_email.png" alt="">
-                        <h3>araujomatheusventura@gmail.com</h3>
+                        <h3>araujomatheus<br class="break">ventura@gmail.com</h3>
 
                     </a>
 
