Atualização completa do Portfólio

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
                         <li><a class="nav-link" href="#contact">Contato</a></li>
                     </div>
                 </ul>
+                <div id="bgsub-menu">
+                </div>
                 <i class="fa-solid fa-bars"></i>
 
             </nav>
@@ -77,10 +79,7 @@
 
                 <img id="img-perfil" src="./src/images/MV.jpg" alt="perfil">
 
-                <p>Sou um desenvolvedor web, que aprecia a tecnologia,
-                    dedicado em aprender e com foco em solução de
-                    problemas para garantir uma boa experiência aos usuários.
-                    Estou sempre em busca de aderir a muito mais conhecimentos, sempre me mantendo informado sobre tudo que acontece, e atualmente estou me empenhando em aprender sobre JavaScript e as tecnologias usadas para criação de jogos, pois pretendo alavancar ainda mais minha experiência como desenvolvedor.</p>
+                <p>Sou um desenvolvedor web apaixonado por tecnologia, dedicado a aprender continuamente e focado em soluções de problemas para garantir uma excelente experiência aos usuários. Estou sempre em busca de novos conhecimentos e me mantenho atualizado com as últimas tendências e inovações do setor. Atualmente, estou aprofundando meus estudos em JavaScript e nas tecnologias utilizadas para a criação de jogos, com o objetivo de expandir ainda mais minhas habilidades como desenvolvedor.</p>
             </div>
 
         </section>
@@ -182,9 +181,9 @@
 
                         <div class="link-project">
 
-                            <a class="" href="https://mathewus.github.io/Results-Summary-Components/" title="Visualizar"target="_blank"><i class="fa-regular fa-eye"></i></a>
+                            <a class="" href="https://mathewus.github.io/Results-Summary-Components/" title="Visualizar" target="_blank"><i class="fa-regular fa-eye"></i></a>
 
-                            <a class="" href="https://github.com/Mathewus/Results-Summary-Components" title="Código"target="_blank"><i class="fa-solid fa-code"></i></a>
+                            <a class="" href="https://github.com/Mathewus/Results-Summary-Components" title="Código" target="_blank"><i class="fa-solid fa-code"></i></a>
 
                         </div>
 
