Atualização do portfolio

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
             <nav>
                 <ul id="menu">
                     <div id="itens">
-                        <li><a class="nav-link active" href="#">Home</a></li>
-                        <li><a class="nav-link" href="#about">Sobre</a></li>
-                        <li><a class="nav-link" href="#skills">Habilidades</a></li>
-                        <li><a class="nav-link" href="#projects">Projetos</a></li>
-                        <li><a class="nav-link" href="#contact">Contato</a></li>
+                        <li><a class="nav-link active" href="#"><i class="fa-solid fa-house icons"></i>Home</a></li>
+                        <li><a class="nav-link" href="#about"><i class="fa-solid fa-user icons"></i>Sobre</a></li>
+                        <li><a class="nav-link" href="#skills"><i class="fa-solid fa-screwdriver-wrench icons"></i>Habilidades</a></li>
+                        <li><a class="nav-link" href="#projects"><i class="fa-regular fa-image icons"></i>Projetos</a></li>
+                        <li><a class="nav-link" href="#contact"><i class="fa-solid fa-phone-flip icons"></i>Contato</a></li>
                     </div>
                 </ul>
                 <div id="bgsub-menu">
@@ -56,7 +56,7 @@
                             <p id="description2-info" href="">Desenvolvedor web focado em
                                 solução de problemas e em
                                 garantir a melhor experiência
-                                para os clientes</p>
+                                para os clientes.</p>
 
                         </div>
 
@@ -79,7 +79,7 @@
 
                 <img id="img-perfil" src="./src/images/MV.jpg" alt="perfil">
 
-                <p>Sou um desenvolvedor web apaixonado por tecnologia, dedicado a aprender continuamente e focado em soluções de problemas para garantir uma excelente experiência aos usuários. Estou sempre em busca de novos conhecimentos e me mantenho atualizado com as últimas tendências e inovações do setor. Atualmente, estou aprofundando meus estudos em JavaScript e nas tecnologias utilizadas para a criação de jogos, com o objetivo de expandir ainda mais minhas habilidades como desenvolvedor.</p>
+                <p>Sou um desenvolvedor web e entusiasta da tecnologia, dedicado a aprender continuamente e focado em soluções de problemas para garantir uma excelente experiência aos usuários. Estou sempre em busca de novos conhecimentos e me mantenho atualizado com as últimas tendências e inovações do setor. Atualmente, estou aprofundando meus estudos em JavaScript e nas tecnologias utilizadas para a criação de jogos, com o objetivo de expandir ainda mais minhas habilidades como desenvolvedor.</p>
             </div>
 
         </section>
@@ -170,7 +170,7 @@
                     </div>
 
                     <h4 class="project-title">Design App OceanPlus</h4>
-                    <p class="project-detail">Design de App de filmes desenvolvido utilizando a ferramenta figma</p>
+                    <p class="project-detail">Design de App de filmes desenvolvido utilizando a ferramenta figma.</p>
                 </div>
 
                 <div class="card-project">
@@ -189,8 +189,8 @@
 
                     </div>
 
-                    <h4 class="project-title">Sumário de Resultados</h4>
-                    <p class="project-detail">Página de visualização de sumário de resultados</p>
+                    <h4 class="project-title">Sumário de Dados</h4>
+                    <p class="project-detail">Página de visualização de sumário de dados.</p>
                 </div>
 
                 <div class="card-project">
@@ -210,7 +210,7 @@
                     </div>
 
                     <h4 class="project-title">Site Filme Mario Bros</h4>
-                    <p class="project-detail">Site desenvolvido sobre o filme Mario Bros utilizando HTML, CSS e Javscript</p>
+                    <p class="project-detail">Site o sobre o filme Mario Bros, exibindo informações como sinopse e trailer do filme.</p>
                 </div>
 
                 <div class="card-project">
@@ -229,7 +229,7 @@
                     </div>
 
                     <h4 class="project-title">Página de Faq</h4>
-                    <p class="project-detail">Página de Perguntas e respostas</p>
+                    <p class="project-detail">Página única inspirada em Perguntas e respostas.</p>
                 </div>
 
                 <div class="card-project">
@@ -249,7 +249,7 @@
                     </div>
 
                     <h4 class="project-title">Card de Visualização</h4>
-                    <p class="project-detail">Página de visualização de Card desenvolvida com HTML e CSS</p>
+                    <p class="project-detail">Página de visualização de Card.</p>
                 </div>
 
             </div>
@@ -302,7 +302,7 @@
 
             <footer id="rodape">
 
-                <span>© Matheus Ventura, 2024. Todos os direitos reservados</span>
+                <span>© Matheus Ventura, 2024. Todos os direitos reservados.</span>
 
             </footer>
 
