Atualização de arquivo html

--- a/index.html
+++ b/index.html
@@ -280,10 +280,10 @@
 
                     </a>
 
-                    <a class="media-info" href="https://www.instagram.com/matheuus.a/" target="_blank">
+                    <a class="media-info" href="https://www.instagram.com/math_eudev/" target="_blank">
 
                         <img src="./src/images/logo_instagram.png" alt="">
-                        <h3>@matheuus.a</h3>
+                        <h3>@math_eudev</h3>
 
                     </a>
 
