Atualização do projeto

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
                 <img id="img-perfil" src="./src/images/MV.jpg" alt="perfil">
 
-                <p>Sou um desenvolvedor web e entusiasta da tecnologia, dedicado a aprender continuamente e focado em soluções de problemas para garantir uma excelente experiência aos usuários. Estou sempre em busca de novos conhecimentos e me mantenho atualizado com as últimas tendências e inovações do setor. Atualmente, estou aprofundando meus estudos em JavaScript, PHP e nas tecnologias utilizadas para a criação de jogos, com o objetivo de expandir ainda mais minhas habilidades como desenvolvedor.</p>
+                <p>Olá, sou Matheus Ventura, um desenvolvedor e entusiasta da tecnologia, dedicado a aprender continuamente e focado em desenvolvimento de soluções para garantir a melhor experiência para os usuários. Estou sempre em busca de novos conhecimentos e me mantenho atualizado com as últimas tendências e inovações do setor. Atualmente, estou aprofundando meus estudos em JavaScript, PHP e nas tecnologias utilizadas para a criação de jogos, com o objetivo de expandir ainda mais minhas habilidades como desenvolvedor.</p>
             </div>
 
         </section>
