atualização do projeto

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
                 <img id="img-perfil" src="./src/images/MV.jpg" alt="perfil">
 
-                <p>Olá, sou Matheus Ventura, um desenvolvedor e entusiasta da tecnologia, dedicado a aprender continuamente e focado em desenvolvimento de soluções para garantir a melhor experiência para os usuários. Estou sempre em busca de novos conhecimentos e me mantenho atualizado com as últimas tendências e inovações do setor. Atualmente, estou aprofundando meus estudos em JavaScript, PHP e nas tecnologias utilizadas para a criação de jogos, com o objetivo de expandir ainda mais minhas habilidades como desenvolvedor.</p>
+                <p>Olá, sou Matheus Ventura, um desenvolvedor e entusiasta da tecnologia, dedicado a aprender continuamente e focado em desenvolvimento de soluções para garantir a melhor experiência para os usuários. Estou sempre em busca de novos conhecimentos e me mantenho atualizado com as últimas tendências e inovações do setor. Atualmente, estou aprofundando meus estudos em JavaScript e PHP, com o objetivo de expandir ainda mais minhas habilidades como desenvolvedor.</p>
             </div>
 
         </section>
@@ -173,6 +173,7 @@
                     <p class="project-detail">Design de App de filmes desenvolvido utilizando a ferramenta figma.</p>
                 </div>
 
+
                 <div class="card-project">
 
                     <div class="card-image">
@@ -213,6 +214,24 @@
                     <p class="project-detail">Site o sobre o filme Mario Bros, exibindo informações como sinopse e trailer do filme.</p>
                 </div>
 
+                <div class="card-project">
+
+                    <div class="card-image">
+
+                        <img src="./src/images/App_Unirios.PNG" alt="">
+
+                        <div class="link-project">
+
+                            <a class="" href="https://www.figma.com/proto/CcTn2rttWCVduj4WZHtvO9/Tela-de-Login?node-id=1-4&t=wKy5w9S2oKhmOL7W-1&scaling=contain&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=1%3A4" title="Visualizar" target="_blank"><i class="fa-regular fa-eye"></i></a>
+
+                        </div>
+
+                    </div>
+
+                    <h4 class="project-title">Design App Unirios</h4>
+                    <p class="project-detail">Design do Portal Acadêmico de uma instituição de ensino desenvolvido utilizando a ferramenta figma.</p>
+                </div>
+                
                 <div class="card-project">
 
                     <div class="card-image">
