Atualização - projeto pokedex

--- a/index.html
+++ b/index.html
@@ -271,6 +271,26 @@
                     <p class="project-detail">Página de visualização de Card.</p>
                 </div>
 
+                <div class="card-project">
+
+                    <div class="card-image">
+
+                        <img src="./src/images/Projeto_pokedex.png" alt="">
+
+                        <div class="link-project">
+
+                            <a class="" href="https://mathewus.github.io/Projeto-Pokedex/" title="Visualizar" target="_blank"><i class="fa-regular fa-eye"></i></a>
+
+                            <a class="" href="https://github.com/Mathewus/Projeto-Pokedex" title="Código" target="_blank"><i class="fa-solid fa-code"></i></a>
+
+                        </div>
+
+                    </div>
+
+                    <h4 class="project-title">Projeto Pokedex</h4>
+                    <p class="project-detail">Página de seleção de personagens pokemon.</p>
+                </div>
+
             </div>
 
         </section>
