Atualização do projeto

--- a/index.html
+++ b/index.html
@@ -291,6 +291,26 @@
                     <p class="project-detail">Página de seleção de personagens pokemon.</p>
                 </div>
 
+                <div class="card-project">
+
+                    <div class="card-image">
+
+                        <img src="./src/images/The_last_ofus.png" alt="">
+
+                        <div class="link-project">
+
+                            <a class="" href="https://mathewus.github.io/Carrosel-The-Last-Of-Us/" title="Visualizar" target="_blank"><i class="fa-regular fa-eye"></i></a>
+
+                            <a class="" href="https://github.com/Mathewus/Carrosel-The-Last-Of-Us" title="Código" target="_blank"><i class="fa-solid fa-code"></i></a>
+
+                        </div>
+
+                    </div>
+
+                    <h4 class="project-title">Carrossel The Last Of Us</h4>
+                    <p class="project-detail">Carrossel de slides animado no tema de uma das séries mais icônicas de zumbis.</p>
+                </div>
+
             </div>
 
         </section>
