Atualização de arquivo html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./src/css/style.css">
     <link rel="stylesheet" href="./src/css/responsive.css">
     <link rel="stylesheet" href="./src/css/fontawesome-free-6.5.2-web/css/all.min.css">
-    <link rel="shortcut icon" href="./src/images/Logo.png" type="image/x-icon">
+    <link rel="icon" href="./src/images/Logo.png" type="image/x-png">
     <title>Matheus Ventura</title>
 </head>
 
